--- a/MagicItemShop.Core/MagicItemShop.Core.csproj
+++ b/MagicItemShop.Core/MagicItemShop.Core.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlTableHelper" Version="1.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
@@ -14,14 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="Pages\Index.cshtml" />
-    <AdditionalFiles Include="Pages\Shared\_Layout.cshtml" />
-    <AdditionalFiles Include="Pages\_ViewImports.cshtml" />
-    <AdditionalFiles Include="Pages\_ViewStart.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MagicItemShop.Core\MagicItemShop.Core.csproj" />
+    <EmbeddedResource Include="Resources\Data\dmpg_items.json" />
+    <EmbeddedResource Include="Resources\Data\shopnames.json" />
   </ItemGroup>
 
 </Project>
